[gd_scene load_steps=33 format=3 uid="uid://fd2s12si5xxw"]

[ext_resource type="Script" uid="uid://c56cc4rn3y627" path="res://scripts/goblin.gd" id="1_4yait"]
[ext_resource type="Texture2D" uid="uid://cpnqvuymwydbr" path="res://assets/goblin.png" id="2_76chb"]
[ext_resource type="Texture2D" uid="uid://bbndh06cpk7sf" path="res://assets/explosion.png" id="3_g1p1y"]
[ext_resource type="Texture2D" uid="uid://cbys40sa8ypld" path="res://assets/emotion_points.png" id="3_q3g0h"]
[ext_resource type="PackedScene" uid="uid://chuit4muup8jh" path="res://scenes/enemy_health_bar.tscn" id="5_g1p1y"]
[ext_resource type="AudioStream" uid="uid://qbye765g53lq" path="res://assets/sounds/Explosion.mp3" id="6_lkl8q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_76chb"]
radius = 33.0
height = 94.0

[sub_resource type="AtlasTexture" id="AtlasTexture_lkl8q"]
atlas = ExtResource("2_76chb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyaat"]
atlas = ExtResource("2_76chb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u21pb"]
atlas = ExtResource("2_76chb")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76chb"]
atlas = ExtResource("2_76chb")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vho8j"]
atlas = ExtResource("2_76chb")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1p1y"]
atlas = ExtResource("3_g1p1y")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2t3q"]
atlas = ExtResource("2_76chb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_exsy4"]
atlas = ExtResource("2_76chb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_osho7"]
atlas = ExtResource("2_76chb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_76chb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkl8q")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyaat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u21pb")
}],
"loop": true,
"name": &"back_walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76chb")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vho8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1p1y")
}],
"loop": false,
"name": &"explode",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2t3q")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exsy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osho7")
}],
"loop": true,
"name": &"front_walk",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nadka"]
atlas = ExtResource("3_g1p1y")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_17tps"]
atlas = ExtResource("3_g1p1y")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y64qe"]
atlas = ExtResource("3_g1p1y")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x8hd"]
atlas = ExtResource("3_g1p1y")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wbsg"]
atlas = ExtResource("3_g1p1y")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q0rr"]
atlas = ExtResource("3_g1p1y")
region = Rect2(512, 0, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_24xck"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nadka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17tps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y64qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x8hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wbsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wbsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wbsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wbsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wbsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wbsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wbsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wbsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wbsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wbsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wbsg")
}],
"loop": false,
"name": &"explosion",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q0rr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1p1y"]
size = Vector2(12, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_lkl8q"]
radius = 150.013

[sub_resource type="AtlasTexture" id="AtlasTexture_mokc4"]
atlas = ExtResource("3_q3g0h")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pjqi"]
atlas = ExtResource("3_q3g0h")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aq02"]
atlas = ExtResource("3_q3g0h")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j5sl"]
atlas = ExtResource("3_q3g0h")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_blvm1"]
atlas = ExtResource("3_q3g0h")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g1p1y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mokc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pjqi")
}],
"loop": false,
"name": &"exclamation",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aq02")
}],
"loop": true,
"name": &"none",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j5sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blvm1")
}],
"loop": false,
"name": &"wonder",
"speed": 1.0
}]

[node name="Goblin" type="CharacterBody2D" node_paths=PackedStringArray("sprite")]
script = ExtResource("1_4yait")
damage = 0
sprite = NodePath("AnimatedSprite2D")
hp = 10

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_76chb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, -10)
sprite_frames = SubResource("SpriteFrames_76chb")
animation = &"front_walk"
autoplay = "front_idle"

[node name="Explosion" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -14)
sprite_frames = SubResource("SpriteFrames_24xck")
animation = &"explosion"
autoplay = "idle"
frame = 14
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g1p1y")

[node name="ChasingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChasingArea"]
visible = false
shape = SubResource("CircleShape2D_lkl8q")

[node name="EmotionPoint" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_g1p1y")
animation = &"wonder"
autoplay = "none"

[node name="DamageArea" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_76chb")

[node name="DamageAreaEnemies" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageAreaEnemies"]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_76chb")

[node name="EnemyHealthBar" parent="." node_paths=PackedStringArray("enemy") instance=ExtResource("5_g1p1y")]
offset_left = -7.0
offset_top = -6.0
offset_right = 9.0
offset_bottom = -5.0
max_value = 10.0
enemy = NodePath("..")

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_lkl8q")

[connection signal="body_entered" from="ExplosionArea" to="." method="_on_explosion_area_body_entered"]
[connection signal="body_entered" from="ChasingArea" to="." method="_on_chasing_area_body_entered"]
[connection signal="body_exited" from="ChasingArea" to="." method="_on_chasing_area_body_exited"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_entered" from="DamageAreaEnemies" to="." method="_on_damage_area_body_entered"]
[connection signal="body_entered" from="DamageAreaEnemies" to="." method="_on_damage_area_enemies_body_entered"]
